# ROS2_galactic

./: README.md
my_package/: package.xml
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
py_service/: package.xml  setup.py
py_service/py_service/: client_member_function.py  service_member_function.py
wheel_car_description/: package.xml
wheel_car_description/launch/: display.launch.py
wheel_car_description/urdf/: wheel_car (copy).urdf  wheel_car.urdf
